--- a/style.css
+++ b/style.css
@@ -2,11 +2,17 @@
     margin: 0;
     padding: 0;
 }
-#pol{
+#search{
     position: absolute;
     margin-top: 0.9%;
     margin-left: 29%;
     padding: 0.96%;
     width: 32%;
     border-radius: 50px;
+    box-shadow: 0 2px 3px #aaa;
+}
+#logo_market{
+    width: 8%;
+    margin-left: 80%;
+    padding-bottom: 2%;
 }
